# kvm-csharp

./: .gitignore  Program.cs  kvm-csharp.csproj  readme.md
ioctls/: CMakeLists.txt  consts.h  ioctls.c  ioctls.h
ioctls/KVM_GET_API_VERSION/: KVM_GET_API_VERSION.c  KVM_GET_API_VERSION.h
src/: Program.cs  commands.cs  kvm.cs  logging.cs  parameters.cs
src/commands/: export.cs  hosts.cs  info.cs  templates.cs  vdevs.cs  vdisks.cs  vms.cs
src/exceptions/: kvm.cs  sql.cs
src/kvm/: kvm.cs  template.cs  vm.cs
src/logging/: host.cs  log.cs
src/logging/tests/: has_kvm_ver.cs
src/registers/: x86_64.cs
src/sql/: host.cs  init.cs  template.cs  vm.cs
